Fix alignment of express checkout buttons.

--- a/uc_cart/uc_cart.css
+++ b/uc_cart/uc_cart.css
@@ -103,6 +103,10 @@
   margin-left: .5em;
 }
 
+#uc-cart-view-form .form-actions input {
+  vertical-align: middle;
+}
+
 /**
  * CSS rules for the cart review table.
  */
